2008-07-09  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_send.c: Remove unnecessary res_pquery prototype.

	* resolv/res_query.c (__libc_res_nquery): Issue debug message only
	if DEBUG is defined.

	* resolv/res_query.c (__libc_res_nquery): Align buffer for T_AAAA
	query.  Adjust buffer size computation for padding.

2008-07-08  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/Makefile: Add rules to build and run tst-setvbuf1.
	* stdio-common/tst-setvbuf1.c: New file.
	* stdio-common/tst-setvbuf1.expect: New file.

	[BZ #6719]
	* libio/iosetvbuf.c (_IO_setvbuf): Correctly clear buffering flags
	when selecting fully-buffered stream.
	Patch by Wang Xin <wxinee@gmail.com>.

2008-07-06  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/open.c: Include <stdio.h>.
	(__open_2): New function.
	(__open64_2): New alias to __open_2.
	* sysdeps/mach/hurd/openat.c: Include <stdio.h>.
	(__openat_2): New function.
	(__openat64_2): New alias to __openat_2.

2008-07-06  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6723]
	* time/mktime.c (__mktime_internal): Normalize tp->tm_isdst value.

2008-07-01  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/unix/bsd/bsd4.4/bits/socket.h: Define MSG_NOSIGNAL.
	* hurd/hurd/fd.h (__hurd_sockfail): Add extern inline function.
	* sysdeps/mach/hurd/recv.c (__recv): Use __hurd_sockfail instead of
	__hurd_dfail.
	* sysdeps/mach/hurd/recvfrom.c (__recvfrom): Likewise.
	* sysdeps/mach/hurd/recvmsg.c (__recvmsg): Likewise.
	* sysdeps/mach/hurd/send.c (__send): Likewise.
	* sysdeps/mach/hurd/sendto.c (__sendfrom): Likewise.
	* sysdeps/mach/hurd/sendmsg.c (__sendmsg): Likewise.

2008-03-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/recv.c (__recv): Initialize NPORTS.
	* sysdeps/mach/hurd/recvfrom.c (__recvfrom): Likewise.
	* sysdeps/mach/hurd/recvmsg.c (__recvmsg): Likewise.
	* hurd/fd-read.c (_hurd_fd_read): Initialize NREAD.
	* hurd/get-host.c (_hurd_get_host_config): Likewise.